# quirkventory

./: CMakeLists.txt  README.md
docs/: API_REFERENCE.md  BUILD_GUIDE.md  UML_CLASS_DIAGRAM.md
include/: CLI.hpp  HTTPServer.hpp  HTTPServer_Enhanced.hpp  Inventory.hpp  NotificationSystem.hpp  Order.hpp  Product.hpp  User.hpp
src/: CLI.cpp  HTTPServer.cpp  Inventory.cpp  NotificationSystem.cpp  Order.cpp  Product.cpp  User.cpp  main.cpp
tests/: test_main.cpp
tests/gtest/: test_integration.cpp  test_inventory_gtest.cpp  test_notification_gtest.cpp  test_order_gtest.cpp  test_product_gtest.cpp  test_user_gtest.cpp
web/: index.html
web/css/: charts.css  dashboard.css
web/js/: api.js  config.js  dashboard.js  main.js  sample-data.js  websocket.js
